--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,5 @@ main:
      url: /resume/
    - title: "About"
      url: /about/
-   - title: "Sample Posts"
-     url: /year-archive/
-   - title: "Sample Collections"
-     url: /collection-archive/
-   - title: "Sitemap"
-     url: /sitemap/
+   - title: "Posts"
+     url: /posts/
